--- a/style/dice.css
+++ b/style/dice.css
@@ -1,5 +1,5 @@
 .container {
-    width: 70%;
+    width: 50%;
     margin: auto;
     text-align: center;
   }
@@ -12,6 +12,7 @@
   
   body {
     background-color: #393E46;
+    width: 500px;
   }
   
   h1 {
@@ -29,7 +30,7 @@
   }
   
   img {
-    width: 80%;
+    width: 50%;
   }
   
   footer {
