--- a/style/contact.css
+++ b/style/contact.css
@@ -1,3 +1,4 @@
+
 #contact-form {
     padding: 20px;
     background-color: #f9f9f9;
@@ -39,12 +40,14 @@
 #contact-form input[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #fa4299;
     color: #fff;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    background: -webkit-linear-gradient(left, #a445b2, #fa4299);
+        transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 #contact-form input[type="submit"]:hover {
