--- a/style/word_scramble.css
+++ b/style/word_scramble.css
@@ -10,8 +10,8 @@ body {
 
 .root { 
 	font-size: x-large; 
-	color: whitesmoke; 
-	background-color: rgb(57, 151, 57); 
+	color: rgb(11, 10, 10); 
+	background-color: rgb(249, 248, 253); 
 	box-shadow: 0 2px 5px grey; 
 	padding: 0% 5% 1% 5%; 
 
@@ -21,12 +21,12 @@ body {
 
 .title { 
 	border-bottom: 4px dashed; 
-	border-color: white; 
+	border-color: rgb(11, 10, 10); 
 } 
 
 input { 
 	font-size: 20px; 
-	padding-left: 10px; 
+	padding-left: 60px; 
 	outline: 2px grey; 
 } 
 
@@ -41,8 +41,8 @@ input {
 	width: 48%; 
 	padding: 1%; 
 	margin: 1%; 
-	background-color: rgb(41, 117, 41); 
+	background-color: rgb(90, 156, 79); 
 	border-radius: 5px; 
-	border-color: rgb(29, 90, 29); 
+	border-color: rgb(111, 181, 111); 
 	font-size: large; 
 }
