--- a/style/word_scramble.css
+++ b/style/word_scramble.css
@@ -14,7 +14,7 @@ body {
 	background-color: rgb(249, 248, 253); 
 	box-shadow: 0 2px 5px grey; 
 	padding: 0% 5% 1% 5%; 
-
+margin-top: 100PX;
 	text-align: center; 
 	border-radius: 5px 0; 
 } 
